_sass/_layout.scss
$side-width: 25%;

#navbar {
    background-color: #221f1d;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    height: 5rem;
    padding-left: $side-width;
}

#nav-menu {
    position: absolute;
    right: 2rem;
    top: 50%;
    transform: translateY(-50%);
    ul, li {
        margin: 0;
    }
    li {
        display: inline;
        padding-right: 2rem;
    }
    li.active a {
        /*border-bottom: 0.2rem solid white;*/
    }
    a {
        color: white;
        padding-bottom: 0.25rem;
    }
    a:hover {
        color: red;
    }
}

#sidebar {
    text-align: center;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.05);
    width: $side-width;
    height: 100%;
    padding: 2rem;

    div {
        margin-bottom: 1rem;
    }
}

#profile-name {
    font-weight: bold;
    font-size: 1.25rem;
}

#profile-description {
    font-style: italic;
    font-size: 0.95rem;
}

#profile-contact {
    font-size: 2.25rem;
}

#profile-avatar {
    img {
        z-index: 2;
        width: 10rem;
        border: 0.5rem solid white;
        -ms-transform: rotate(-4deg); /* IE 9 */
        -webkit-transform: rotate(-4deg); /* Chrome, Safari, Opera */
        transform: rotate(-4deg);
        box-shadow: 5px 5px 30px #333;
        
        &:hover {
            transform: rotate(-1deg);
        }
    }
}

#profile-resume a {
    text-decoration: underline;
}

#page-content {
    position: fixed;
    left: $side-width;
    top: 5rem;
    right: 0;
    bottom: 0;
    overflow: auto;
}

.page-content-padding {
    padding: 2rem 5rem;
}

iframe {
    width: 100%;
    height: 100%;
}

#projects-container {
    .project {
        .title {
            font-weight: bold;
            font-size: 1.5rem;
            text-decoration: underline;
        }
        a:after{
            content: "\f0da";
            font-family: FontAwesome;
            display: inline-block;
            margin: 0 0.5rem;
            color: rgba(255, 255, 255, 0.3);
            text-shadow: -1px -1px rgba(0, 0, 0, 0.2);
            -webkit-text-rendering: optimizeLegibility;
            -moz-text-rendering: optimizeLegibility;
            -ms-text-rendering: optimizeLegibility;
            -o-text-rendering: optimizeLegibility;
            text-rendering: optimizeLegibility;
        }
        margin-bottom: 2rem;
    }
}

